--- a/src/container-queries.css
+++ b/src/container-queries.css
@@ -9,14 +9,13 @@
     container-type: inline-size;
 }
 .subelement {
-    border: 2px solid green;
     color: blue;
 }
 
 /* styles applied till parent is greater than 500рх */
 @container (max-width: 500px) {
     .subelement {
-        color: red;
+        color: white;
         background-color: lightpink;
     }
 }
