--- a/src/style-queries.css
+++ b/src/style-queries.css
@@ -43,7 +43,7 @@ display: block;
 width: 1.5rem;
 height: 1.5rem;
 padding: 1.5rem;
-background-color: white;
+background-color: oklch(100% 0 0);
 border-radius: 100%;
 font-size: xx-large;
 }
@@ -68,22 +68,22 @@ font-weight: 700;
     background: 
   linear-gradient(
     to top,
-    hsl(61.04, 100%, 45.1%) 0%,
-    hsl(58.82, 100%, 44.36%) 0.9%,
-    hsl(56.14, 100%, 44.41%) 3.6%,
-    hsl(53.12, 100%, 44.47%) 7.8%,
-    hsl(49.84, 100%, 44.54%) 13.3%,
-    hsl(46.4, 100%, 44.6%) 19.9%,
-    hsl(42.88, 100%, 44.67%) 27.4%,
-    hsl(39.37, 100%, 44.74%) 35.6%,
-    hsl(35.96, 100%, 44.81%) 44.2%,
-    hsl(32.74, 100%, 44.88%) 53.1%,
-    hsl(29.78, 100%, 44.94%) 62.1%,
-    hsl(27.17, 100%, 44.99%) 70.8%,
-    hsl(24.99, 100%, 45.04%) 79.2%,
-    hsl(23.34, 100%, 45.07%) 87%,
-    hsl(22.28, 100%, 45.09%) 94%,
-    hsl(21.91, 100%, 45.1%) 100%
+    oklch(89.21% 0.196 111.05) 0%,
+    oklch(87.48% 0.18893348221316644 108.27146634543439) 0.9%,
+    oklch(85.43% 0.18088487322240807 104.56271606237503) 3.6%,
+    oklch(83.16% 0.1727952972355218 99.84501082181461) 7.8%,
+    oklch(80.73% 0.16551680090241375 94.06186963854998) 13.3%,
+    oklch(78.22% 0.15994435029942605 87.31331734080084) 19.9%,
+    oklch(75.74% 0.1569293587924205 79.853290626398) 27.4%,
+    oklch(73.35% 0.15692251413822955 72.15202214630021) 35.6%,
+    oklch(71.13% 0.15986476375769781 64.7734346407652) 44.2%,
+    oklch(69.14% 0.165 58.2) 53.1%,
+    oklch(67.42% 0.17179572457853176 52.69847138280365) 62.1%,
+    oklch(66% 0.17876710232783585 48.353721304765344) 70.8%,
+    oklch(64.9% 0.185 45.11) 79.2%,
+    oklch(64.1% 0.19 42.9) 87%,
+    oklch(63.62% 0.193 41.59) 94%,
+    oklch(63.46% 0.19466133311079425 41.1474921953706) 100%
   );
   }
   
@@ -96,22 +96,22 @@ font-weight: 700;
   .order-card {
     background: linear-gradient(
     to bottom,
-    hsl(98.09, 100%, 45.1%) 0%,
-    hsl(101.54, 89.27%, 47.34%) 0.9%,
-    hsl(106.33, 77.76%, 50.02%) 3.6%,
-    hsl(112.88, 74.6%, 53.06%) 7.8%,
-    hsl(121.8, 71.29%, 55.41%) 13.3%,
-    hsl(131.6, 70.48%, 53.51%) 19.9%,
-    hsl(141.06, 69.71%, 51.56%) 27.4%,
-    hsl(149.97, 70.09%, 49.61%) 35.6%,
-    hsl(158.19, 74.94%, 47.7%) 44.2%,
-    hsl(165.58, 79.9%, 45.9%) 53.1%,
-    hsl(172.05, 84.83%, 44.24%) 62.1%,
-    hsl(177.53, 89.5%, 42.77%) 70.8%,
-    hsl(181.89, 93.84%, 42.81%) 79.2%,
-    hsl(184.8, 97.23%, 44.04%) 87%,
-    hsl(186.48, 99.29%, 44.82%) 94%,
-    hsl(187.04, 100%, 45.1%) 100%
+    oklch(81.32% 0.257 139.13) 0%,
+    oklch(80.82% 0.256 139.64) 0.9%,
+    oklch(80.24% 0.252 140.39) 3.6%,
+    oklch(79.63% 0.246 141.54) 7.8%,
+    oklch(79.03% 0.236 143.28) 13.3%,
+    oklch(78.47% 0.222 145.84) 19.9%,
+    oklch(77.98% 0.204 149.5) 27.4%,
+    oklch(77.58% 0.185 154.56) 35.6%,
+    oklch(77.29% 0.166 161.33) 44.2%,
+    oklch(77.12% 0.15 169.85) 53.1%,
+    oklch(77.05% 0.138 179.68) 62.1%,
+    oklch(77.05% 0.132 189.79) 70.8%,
+    oklch(77.11% 0.13 198.85) 79.2%,
+    oklch(77.19% 0.1316961038432716 205.75164821456826) 87%,
+    oklch(77.24% 0.1335253524323043 210.05199404846712) 94%,
+    oklch(77.27% 0.134 211.53) 100%
   );
   }
   
